# farasapy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
farasa/: __base.py  __init__.py  _base.py  _diacratizer.py  base.py  dependency.py  diacratizer.py  lemmatizer.py  ner.py  pos.py  segmenter.py  spellchecker.py  stemmer.py
farasa/farasa_bin/data/: FDTdata.auxWordsTransliteration.ser  FDTdata.bareWords.ser  FDTdata.bestDiacritizedTemplateFull.ser  FDTdata.bestDiacritizedTemplateStem.ser  FDTdata.dualPlural.ser  FDTdata.hmCurrentPrevPOSAndPrevDiacritic.ser  FDTdata.hmDiacritic.ser  FDTdata.hmDiacriticGivenCurrentPrevPOSAndPrevDiacritic.ser  FDTdata.hmDiacriticGivenGenderNumber.ser  FDTdata.hmDiacriticGivenLastLetter.ser  FDTdata.hmDiacriticGivenNextGenderNumber.ser  FDTdata.hmDiacriticGivenNextPOS.ser  FDTdata.hmDiacriticGivenNextStemPOS.ser  FDTdata.hmDiacriticGivenPOS.ser  FDTdata.hmDiacriticGivenPrefix.ser  FDTdata.hmDiacriticGivenPrefixPOS.ser  FDTdata.hmDiacriticGivenPrevGenderNumber.ser  FDTdata.hmDiacriticGivenPrevPOS.ser  FDTdata.hmDiacriticGivenPrevStemPOS.ser  FDTdata.hmDiacriticGivenStem.ser  FDTdata.hmDiacriticGivenStemPOS.ser  FDTdata.hmDiacriticGivenSuffix.ser  FDTdata.hmDiacriticGivenSuffixPOS.ser  FDTdata.hmDiacriticGivenTemplate.ser  FDTdata.hmGenderNumber.ser  FDTdata.hmLastLetter.ser  FDTdata.hmPOS.ser  FDTdata.hmPrefix.ser  FDTdata.hmPrefixPOS.ser  FDTdata.hmStem.ser  FDTdata.hmStemPOS.ser  FDTdata.hmSuffix.ser  FDTdata.hmSuffixPOS.ser  (+7 more)
farasapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
