[project]
name = "farasapy"
version = "0.1.1"
description = "A Python Wrapper for the well Farasa toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.32",
    "tqdm~=4.66",
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "bleach==3.3.0",
    "pylint==2.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["farasa"]
